--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>BunnyFMS</title>
+	<title>BunnyFMS | Admin</title>
 
 	<link href="water.css" rel="stylesheet">
 	<link rel='icon' type='image/png' href='/favicon.png'>
